# eu-ai-act-compliance-agent

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  RELEASE_PLAN.md  about_eu_ai_act.html  agent.py  docker-compose.prod.yml  docker-compose.yml  guardrails.md  landing_page.html  login_page.html  main.py  opencode.json  prompt-collection.md  pyproject.toml  ui.py
ai-tool-report-agent-s/: agent.py
common/: a2a_server.py  app_server.py
dockerfiles/: Dockerfile.api  Dockerfile.ui
pd_ai_tool_assessment_agent/: __main__.py  agent.py
scripts/: use_streamlit_auth_profile.sh
shared/: AIToolAssessRequest.py
src/compliance_agent/: __init__.py  agent.py  config.py  logging_config.py
src/compliance_agent/api/: __init__.py  app.py  models.py
src/compliance_agent/billing/: __init__.py  auth.py  db.py  models.py  service.py  stripe_service.py  tool_lock.py
src/compliance_agent/guardrails/: __init__.py  callbacks.py
src/compliance_agent/services/: __init__.py  pdf_service.py
src/compliance_agent/tools/: __init__.py  search.py
src/compliance_agent/tools/search_providers/: __init__.py  base.py  factory.py  serpapi.py  serper.py
src/frontend/: __init__.py  api_client.py  auth.py  main_content.py  sidebar.py
tests/unit/api/: test_app_static_pages.py  test_billing_api.py  test_sessions_api.py  test_ui_bootstrap_api.py
tests/unit/billing/: test_service.py  test_tool_lock.py
tests/unit/frontend/: test_sidebar_links.py
tests/unit/guardrails/: conftest.py  test_callbacks.py
