[project]
name = "agents"
version = "0.1.0"
description = "Agents designed for in-depth investigation of specified AI tools, resulting in a structured, analytical research report"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.18.0",
    "litellm>=1.80.7",
    "python-dotenv>=1.2.1",
]
