[project]
name = "eu-ai-act-compliance-agent"
version = "0.1.0"
description = "Agents designed for in-depth investigation of specified AI tools, resulting in a structured, analytical research report"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "fastapi>=0.118.3",
    "google-auth>=2.41.1",
    "google-adk>=1.18.0",
    "google-search-results>=2.4.2",
    "greenlet>=3.2.4",
    "langchain-community>=0.3.31",
    "litellm>=1.80.7",
    "markdown>=3.9",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.9",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
